adicionando o front-end do cadastro e login

--- a/header.html
+++ b/header.html
@@ -30,7 +30,7 @@
 
                     <div> <a href="" class="item-header"> Anuncie a sua propriedade </a> </div>
         
-                    <div> <a href="" class="item-header"> Login </a> </div>
+                    <div> <a href="login.html" class="item-header"> Login </a> </div>
         
                     <div> <a href="" class="item-header"> Favoritos </a> </div>
 
