adicionando a logo e um botão para o admin no cadastro e no login

--- a/cadastrar.html
+++ b/cadastrar.html
@@ -16,7 +16,13 @@
 
             <div class="left-container">
 
+                <div class="left-content">
 
+                    <div> <h1> Busca Hotel </h1> </div>
+
+                    <div> <button> <a href=""> Faça o login como Admin </a> </button> </div>
+
+                </div>
 
             </div>
 
@@ -26,7 +32,7 @@
 
                 <div class="login-container">
                     
-                    <div> <h1> Cadastrar </h1> </div>
+                    <div> <h2> Cadastrar </h2> </div>
 
                     <div class="form-container">
         
