--- a/web/cliente/login.html
+++ b/web/cliente/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/static/css/reset.css">
-    <link rel="stylesheet" href="assets/static/css/cadastrar-login.css">
+    <link rel="stylesheet" href="../assets/static/css/reset.css">
+    <link rel="stylesheet" href="../assets/static/css/cadastrar-login.css">
     <title> Login </title>
 </head>
 <body>
@@ -22,7 +22,7 @@
 
                     <div> <h2>  Viage sem se preocupar. </h2> </div>
 
-                    <div> <button> <a href="index.html"> Voltar ao inicio </a> </button> </div>
+                    <div> <button> <a href="../index.html"> Voltar ao inicio </a> </button> </div>
 
                 </div>
 
