adicionando o excluir e o editar

--- a/web/hotel/anunciar.html
+++ b/web/hotel/anunciar.html
@@ -22,40 +22,26 @@
                 <div> <h2> Anuncie a sua empresa </h2> </div>
 
                 <label for="">
+                    Nome: <br>
+                </label>
+                
+                <input name="nome" class="input-form" type="text"> <br>
+
+                <label for="">
                     Cnpj: <br>
                 </label>
 
                 <input name="cnpj"  class="input-form" type="text"> <br>
 
                 <label for="">
-                    Nome: <br>
+                    Local: <br>
                 </label>
 
-                <input name="nome" class="input-form" type="text"> <br>
-
-                <div> <h2> Crie um administrador </h2> </div>
-
-                <label for="">
-                    Nome: <br>
-                </label>
-
-                <input class="input-form" type="text"> <br>
-
-                <label for="">  
-                    Email:  <br>
-                </label>
-
-                <input class="input-form" type="email"> <br>
-
-                <label for="">
-                    Senha: <br>
-                </label>
-
-                <input class="input-form" type="password"> <br>
+                <input name="local" class="input-form" type="text"> <br>
 
                 <input value="Cadastrar" class="input-submit" type="submit"> <br> <br>
 
-                <a href="../index.html"> Página inicial </a>
+                <a href="../index.jsp"> Página inicial </a>
 
             </form> 
 
